# tugas-strukdat-manajemen

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/avl/: Avl.hpp
src/core/constraint/: Constraint.hpp  ErrorBag.cpp  ErrorBag.hpp  MustFixSizeConstraint.hpp  MustInRangeConstraint.cpp  MustInRangeConstraint.hpp  MustIntegerConstraint.cpp  MustIntegerConstraint.hpp
src/core/input/: Input.hpp  InputBuilder.cpp  InputBuilder.hpp
src/core/page/: CanLoopPage.cpp  CanLoopPage.hpp  ClearScreenPage.hpp  ExitPage.hpp  LoopPage.cpp  LoopPage.hpp  MenuLoopPage.hpp  MenuPage.cpp  MenuPage.hpp  Page.hpp  PageItem.hpp
src/core/renderer/: BasicInputMenuRenderer.cpp  BasicInputMenuRenderer.hpp  BasicMenuRenderer.cpp  BasicMenuRenderer.hpp  InputMenuRenderer.hpp  MenuRenderer.hpp
src/custom/constraint/: MustNumericConstraint.cpp  MustNumericConstraint.hpp  MustUniqueCodeProductConstraint.cpp  MustUniqueCodeProductConstraint.hpp
src/custom/renderer/: ModernMenuRenderer.cpp  ModernMenuRenderer.hpp
src/entity/: Product.hpp
src/file/: ProductFileHandler.cpp  ProductFileHandler.hpp
src/pages/: MainPage.cpp  MainPage.hpp
src/pages/history/: HistoryPage.cpp  HistoryPage.hpp  InOrderHistoryPage.cpp  InOrderHistoryPage.hpp  PostOrderHistoryPage.cpp  PostOrderHistoryPage.hpp  PreOrderHistoryPage.cpp  PreOrderHistoryPage.hpp
src/pages/insert/: InsertPage.cpp  InsertPage.hpp
src/pages/remove/: RemovePage.cpp  (+1 more)
src/repositories/: ProductRepository.hpp  ProductRepositoryFactory.cpp  ProductRepositoryFactory.hpp  ProductRepositoryImpl.cpp  ProductRepositoryImpl.hpp
(+20 files in other folders)
